--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -12,9 +12,9 @@
   &-employoee-position {
     margin-bottom: 16px;
   }
-  &__list {
-    display: flex;
-  }
+  // &__list {
+  //   display: flex;
+  // }
   &-wrapper {
     padding: 30px 0;
   }
@@ -26,7 +26,10 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   text-align: center;
+  // &:not(:last-child) {
+  //   margin-right: 30px;
+  // }
   &:not(:last-child) {
-    margin-right: 30px;
+    margin-bottom: 30px;
   }
 }
