--- a/sass/main.css
+++ b/sass/main.css
@@ -33,6 +33,12 @@ p {
   list-style: none;
 }
 
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
 body {
   margin: 0;
   background-color: var(--bgc-main);
@@ -208,7 +214,7 @@ html {
 }
 
 .section {
-  padding: 94px 0;
+  padding: 60px 0;
 }
 
 .social-list {
@@ -401,12 +407,6 @@ html {
   margin-bottom: 16px;
 }
 
-.team__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
 .team-wrapper {
   padding: 30px 0;
 }
@@ -420,7 +420,7 @@ html {
 }
 
 .team__dudes:not(:last-child) {
-  margin-right: 30px;
+  margin-bottom: 30px;
 }
 
 .client-icon {
@@ -892,12 +892,6 @@ html {
 .portfolio-elements-wrapper {
   position: relative;
   overflow: hidden;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
 }
 
 .portfolio-elements:hover .portfolio-top-text,
