--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,7 +1,13 @@
 .team {
   background-color: var(--bgc-light);
   &__title {
-    margin-bottom: 50px;
+    // margin-bottom: 50px;
+    margin-bottom: 30px;
+    font-size: 28px;
+    line-height: (33 / 28);
+    @media screen and (min-width: 1200px) {
+      font-size: 36px;
+    }
   }
   &-employee-name {
     color: var(--title-text-color);
@@ -12,9 +18,14 @@
   &-employoee-position {
     margin-bottom: 16px;
   }
-  // &__list {
-  //   display: flex;
-  // }
+  &__list {
+    // display: flex;
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
+
   &-wrapper {
     padding: 30px 0;
   }
@@ -26,10 +37,13 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   text-align: center;
-  // &:not(:last-child) {
-  //   margin-right: 30px;
-  // }
-  &:not(:last-child) {
-    margin-bottom: 30px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 30px * 2) / 2);
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 30px * 4) / 4);
   }
 }
