--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -15,7 +15,11 @@
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-    background-image: url(../images/mob/hero_mob@2x.jpg);
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/mob/hero_mob@2x.jpg);
   }
   @media screen and (min-width: 768px) {
     background-image: linear-gradient(
