Добавляет ретину фона на планшет

--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -12,6 +12,7 @@
   padding: 200px 0;
   max-width: 1600px;
   margin: 0 auto;
+
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
@@ -27,6 +28,15 @@
         rgba(47, 48, 58, 0.4)
       ),
       url(../images/tablet/hero_tab.jpg);
+  }
+  @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/tablet/hero_tab@2x.jpg);
   }
   @media screen and (min-width: 1200px) {
     background-image: linear-gradient(
