--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -18,7 +18,11 @@ p {
 .criteria,
 .portfolio,
 .social-list,
-.clients-list {
+.clients-list,
+.mob-menu-list,
+.mob-menu-tel,
+.mob-menu-mail,
+.mob-menu-social-link {
   list-style: none;
 }
 
