--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,8 +2,10 @@
   color: var(--accent-color);
   font-family: Raleway, sans-serif;
   text-decoration: none;
-  font-size: 26px;
+  // font-size: 26px;
+  font-size: 24px;
   line-height: 1.19;
+  margin: 16px 15px;
   &_color_black {
     color: #000000;
   }
