--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,6 +1,7 @@
 .site-nav,
 .contact-list {
-  display: flex;
+  // display: flex;
+  display: none;
 }
 
 .site-nav .item:not(:last-child),
@@ -23,7 +24,8 @@
 .container-head {
   display: flex;
   align-items: center;
-  width: 1200px;
+  justify-content: space-between;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -34,4 +36,75 @@
 .all-nav {
   display: flex;
   align-items: center;
+}
+
+.mob-menu {
+  position: absolute;
+  background-color: #fff;
+  top: 0;
+  right: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 10px 15px 0 40px;
+}
+
+.mob-menu-btn-close {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  // border-radius: 50%;
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  cursor: pointer;
+}
+
+.mob-menu-list {
+  margin-top: 48px;
+  margin-bottom: 302px;
+}
+
+.mob-menu-item {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: (47/40);
+  // text-align: center;
+  letter-spacing: 0.02em;
+
+  &:not(last-child) {
+    margin-bottom: 32px;
+  }
+}
+
+.mob-menu-tel {
+  font-size: 34px;
+  line-height: (40/34);
+  letter-spacing: 0.02em;
+
+  color: #2196f3;
+  margin-bottom: 32px;
+  display: block;
+}
+
+.mob-menu-mail {
+  font-size: 24px;
+  line-height: (28/24);
+  letter-spacing: 0.02em;
+
+  color: #757575;
+  margin-bottom: 64px;
+  display: block;
+}
+
+.mob-menu-social-link {
+  display: inline;
+  font-size: 18px;
+  line-height: (22/18);
+  letter-spacing: 0.02em;
+
+  color: #2196f3;
 }
