--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -45,6 +45,17 @@
       ),
       url(../images/desctop/hero_des.jpg);
   }
+
+  @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/desctop/hero_des@2x.jpg);
+  }
+
   &__title {
     color: var(--white-color);
     font-weight: 900;
