--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,7 +1,40 @@
-.site-nav,
-.contact-list {
-  // display: flex;
+.site-nav {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+
   display: none;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    margin-left: 88px;
+    margin-right: 84px;
+  }
+}
+
+.site-nav .link {
+  color: var(--title-text-color);
+  text-decoration: none;
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+  .site-nav .link.current {
+    color: var(--accent-color);
+  }
+}
+
+.link.current::after {
+  content: '';
+  width: 100%;
+  height: 4px;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 2px;
+  background-color: var(--accent-color);
 }
 
 .site-nav .item:not(:last-child),
@@ -31,11 +64,67 @@
   margin-left: auto;
   margin-right: auto;
   border-bottom: 1px solid #ececec;
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+  }
+}
+.contact-link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--primery-text-color);
+  text-decoration: none;
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+  .mail-icon,
+  .phone-icon {
+    fill: var(--primery-text-color);
+    margin-right: 10px;
+  }
+}
+.contact-list {
+  display: none;
+  @media screen and (min-width: 768px) {
+    display: block;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
+}
+
+.contact-link:hover .phone-icon,
+.contact-link:focus .phone-icon {
+  fill: var(--accent-color);
+}
+
+.contact-link:hover .mail-icon,
+.contact-link:focus .mail-icon {
+  fill: var(--accent-color);
 }
 
 .all-nav {
   display: flex;
   align-items: center;
+}
+
+.mob-menu-btn-open {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  cursor: pointer;
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
 
 .mob-menu {
@@ -46,6 +135,9 @@
   width: 100vw;
   height: 100vh;
   padding: 10px 15px 0 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .mob-menu-btn-close {
@@ -56,16 +148,30 @@
   height: 40px;
   // border-radius: 50%;
   background-color: transparent;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: none;
   position: absolute;
   top: 8px;
   right: 8px;
   cursor: pointer;
 }
 
+.mob-menu-link {
+  color: var(--title-text-color);
+  text-decoration: none;
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+  &.current {
+    color: var(--accent-color);
+  }
+}
+
 .mob-menu-list {
   margin-top: 48px;
-  margin-bottom: 302px;
+}
+
+.mob-menu-bottom {
 }
 
 .mob-menu-item {
@@ -88,6 +194,7 @@
   color: #2196f3;
   margin-bottom: 32px;
   display: block;
+  // text-decoration: none;
 }
 
 .mob-menu-mail {
@@ -98,13 +205,26 @@
   color: #757575;
   margin-bottom: 64px;
   display: block;
+  // text-decoration: none;
 }
 
 .mob-menu-social-link {
-  display: inline;
+  display: inline-flex;
   font-size: 18px;
   line-height: (22/18);
   letter-spacing: 0.02em;
+  margin-bottom: 48px;
 
   color: #2196f3;
+}
+
+.mob-menu-social-link::after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 22px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  // transform: rotate(90deg);
+  margin-left: 10px;
+  margin-right: 10px;
 }
