--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -8,7 +8,7 @@
   @media screen and (min-width: 768px) {
     display: flex;
     margin-left: 88px;
-    margin-right: 84px;
+    // margin-right: 84px;
   }
 }
 
@@ -37,8 +37,7 @@
   background-color: var(--accent-color);
 }
 
-.site-nav .item:not(:last-child),
-.contact-list .connection:not(:last-child) {
+.site-nav .item:not(:last-child) {
   margin-right: 50px;
 }
 
@@ -103,6 +102,13 @@
 .contact-link:hover .mail-icon,
 .contact-link:focus .mail-icon {
   fill: var(--accent-color);
+}
+
+li.connection:not(:last-child) {
+  margin-bottom: 10px;
+  @media screen and (min-width: 1200px) {
+    margin-right: 30px;
+  }
 }
 
 .all-nav {
